--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .nav {
     display: flex;
-    background-color: #F8DDA4;
+    background-color: #071013;
     padding: 20px;
     margin-top: -15px;
     margin-left: -15px;
@@ -15,7 +15,7 @@
 }
 
 .right a {
-    color: black;
+    color: white;
     padding: 10px;
     text-decoration: none;
     float: right;
@@ -35,20 +35,11 @@
     align-items: center;
 }
 
-.welcome {
-    background-color: #690500;
-    margin-top: 15px;
-    text-align: center;
-    font-size: 35px;
-    padding: 3px;
-    color: white;
-    margin-left: -15px;
-    margin-right: -15px;
-}
 
 
 h2, p {
     padding-left: 75px;
+    color: white;
 }
 
 h2 {
@@ -60,9 +51,6 @@ h2 {
     margin-right: 60px;
 }
 
-.background {
-    background-image: url("img/19742.jpg");
-}
 
 .profilepic {
     display: block;
@@ -72,9 +60,90 @@ h2 {
 }
 
 footer {
-    background-color: #F8DDA4;
+    background-color: #071013;
     padding: 60px;
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: -15px;
+    margin-top: -15px;
+}
+
+.background {
+    background-image: linear-gradient(to bottom, #E08D79, #63382E);
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom: -15px;
+    padding-bottom: 30px;
+}
+
+.graphicdesign {
+    background-color: #FFE19C;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.uxui {
+    background-color: #8B7845;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.gallery {
+    display: grid;
+    grid-template-rows: 5 3vw;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 20px;
+}
+
+.row1 {
+    display: flex;
+    flex-direction: row;
+}
+
+.gallery img {
+    width: 19%;
+    height: 19%;
+    object-fit: cover;
+    padding: 5px;
+}
+
+.row2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.welcome {
+    background-color: #690500;
+    color: white;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 80px;
 }
