--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,10 @@
     color: white;
     padding: 10px;
     text-decoration: none;
-    float: right;
     padding-left: 40px;
     padding-right: 40px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .right {
@@ -106,35 +107,79 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 20px;
 }
 
 .gallery {
     display: grid;
     grid-template-rows: 5 3vw;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-right: 10px;
     margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .row1 {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+}
+
+.row2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .gallery img {
     width: 19%;
     height: 19%;
     object-fit: cover;
-    padding: 5px;
+    padding: 6px;
 }
 
-.row2 {
+.row3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.row4 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.row5 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.row6 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.row7 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.row8 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.welcome {
+.banner {
     background-color: #690500;
     color: white;
     padding-top: 3px;
@@ -142,8 +187,53 @@ footer {
     padding-right: 20px;
     padding-left: 20px;
     text-align: center;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-h2 {
-    font-size: 80px;
+.welcome {
+    font-size: 100px;
+    padding-top: 3px;
+    padding-bottom: 10px;
+    display: flex;
+}
+
+.thesis1 {
+    background-color: #EE5622;
+    display: flex;
+}
+
+.overlayimg1 {
+    background-image: url();
+}
+
+.preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 100000;
+    background-color: white;
+    top: 0;
+    display: flex;
+    align-items: center;
+}
+  
+.loading {
+    animation: spin 3s ease;
+    width: 150px;
+    margin: 0 auto;
+}
+  
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(720deg);
+    }
 }
