--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
-.nav {
-    display: flex;
-    background-color: #071013;
-    padding: 20px;
-    margin-top: -15px;
-    margin-left: -15px;
-    margin-right: -15px;
+.customNav {
+  position: fixed;
+  width: 100%;
+  background-color: #E9EB9E !important;
+  background-size: cover;
+  z-index: 10;
 }
 
-.logo, .right {
+
+.navoptions {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+}
+
+.logo {
     height: 50px;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .right a {
@@ -29,14 +37,6 @@
     display: flex;
     justify-content: flex-end;
 }
-
-.logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-
 
 h2, p {
     padding-left: 75px;
