--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 .customNav {
   position: fixed;
-  width: 100%;
-  background-color: #E9EB9E !important;
+  background-color: #001514 !important;
   background-size: cover;
   z-index: 10;
+  margin-right: -15px !important;
 }
 
 
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
+    margin-left: 10px;
 }
 
 .logo {
@@ -20,6 +21,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    padding-left: 10px;
 }
 
 .right a {
@@ -30,6 +32,13 @@
     padding-right: 40px;
     display: flex;
     justify-content: flex-end;
+}
+
+.nav-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end !important;
+    color: white !important;
 }
 
 .right {
@@ -81,15 +90,34 @@ h2 {
     display: flex;
     justify-content: center;
 }
+
+.container2 {
+    background-color: #1B2432;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    margin-top: 50px; 
+}
+
+.container3 {
+    background-color: #54565A;
+    padding-top: 2px;
+    padding-bottom: 15px;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 50px;
+    border: solid black 5px;
+}
+
 .profilepic {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20px;
+    margin-top: 40px;
+    border: black solid 5px;
 }
 
 footer {
-    background-color: #071013;
+    background-color: #001514;
     padding: 60px;
     margin-left: -15px;
     margin-right: -15px;
@@ -98,7 +126,8 @@ footer {
 }
 
 .background {
-    background-image: linear-gradient(to bottom, #E08D79, #63382E);
+    background-image: url("../img/New Background-02.jpg");
+    background-repeat: no-repeat;
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: -15px;
@@ -244,8 +273,8 @@ footer {
     color: white;
     padding-top: 3px;
     padding-bottom: 3px;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     text-align: center;
     height: 120px;
     display: flex;
@@ -307,10 +336,6 @@ footer {
     }
 }
 
-.overlayimg {
-    
-}
-
 .profilepic {
     width: 65%;
 }
@@ -319,6 +344,7 @@ footer {
     font-size: 40px;
     margin-left: 140px;
     margin-top: 35px;
+    color: white;
 }
 
 .para {
@@ -335,4 +361,52 @@ footer {
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
+}
+
+.contact {
+    font-size: 20px;
+    margin-left: 130px;
+    margin-right: 80px;
+    line-height: 40px;
+    color: white;
+}
+
+.wdp {
+    margin-top: 30px;
+    background-image: url("../Graphic Design/Workers Defense Project Website Redesign.jpg");
+    background-repeat: no-repeat;
+    width: 960px;
+    height: 500px;
+    padding-bottom: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.casestudy {
+    display: block;
+    margin-left: 250px;
+    margin-right: 250px;
+    margin-top: 50px;
+}
+
+.casestudy1 {
+    width: 35%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
+.cs1 {
+    background-color: #FFE19C;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 15px;
+    display: block;
 }
